pkg/lang/testdata/ub/constraints/valid/check-constraints-indexed-fields.ub
constraints: [
  { kind: required-together, fields: [input.listeners[0].cert, input.listeners[0].key] },
]
