pkg/lang/testdata/ub/constraints/invalid/fields-empty.ub
constraints: [
  { kind: required-together, fields: [] },
]
